src/app/shared/components/nav/nav.scss
:host {
  display: flex;
  height: 100%;
  z-index: 100;
  position: relative;
  overflow-y:  auto;
    background-color: var(--color-medium-blue);
}

.nav {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 232px;
  min-height: 100%;
  // min-height: 100vh;
  background-color: var(--color-medium-blue);
  padding: 64px 0;

  &__logo {
    display: block;
    margin-bottom: 64px;
    padding-right: 16px;

    img {
      width: 100px;
      height: auto;
    }
  }

  &__menu {
    display: flex;
    flex-direction: column;
    gap: 6px;
    flex: 1;
    width: 100%;
  }

  &__link {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 16px;
    width: 100%;
    padding: 8px 30px;
    color: var(--color-font-bright);
    font-size: 1rem;
    font-weight: 400;
    text-decoration: none;
    border-left: 4px solid transparent;
    transition: var(--transition-fast);

    img {
      width: 24px;
      height: 24px;
    }

    &:hover {
      background-color: var(--color-nav-hover);
    }

    &.active {
      background-color: var(--color-dark-blue);
      font-weight: 500;

      &:hover {
        transform: none;
      }
    }
  }

  &__footer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;
    margin-top: auto;
    padding-top: 32px;
    width: 100%;
  }

  &__footer-link {
    font-weight: 300;
    color: var(--color-light-grey);
    font-size: 1rem;
    text-decoration: none;
    transition: var(--transition-fast);
    transform-origin: left center;
    padding-left: 30px;

    &::after {
      content: attr(data-text);
      font-weight: 500;
      display: block;
      height: 0;
      overflow: hidden;
      visibility: hidden;
    }

    &:hover {
      color: var(--color-light-blue);
      font-weight: 500;
      transform: scaleX(1.03);
    }

    &.active {
      color: var(--color-font-bright);
      font-weight: 500;
      background-color: var(--color-dark-blue);
      width: 100%;
      padding: 8px 30px;

      &:hover {
        transform: none;
        color: var(--color-font-bright);
      }
    }
  }
}

@media (max-width: 768px) {
  .guest-mobile-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    flex-direction: row;
    gap: 0;

    .nav__link {
      flex: 1;
    }
  }

  .nav__footer--guest {
    flex: 2;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 0;
    padding: 0;
    margin: 0;
  }

  .nav__footer--guest .nav__footer-link {
    flex: 1;
    padding: 5px;
    font-size: 1rem;
    font-weight: 300;
    text-align: center;
    transform: none;
    white-space: nowrap;

    &::after {
      display: none;
    }

    &:hover {
      transform: none;
    }

    &.active {
      width: auto;
      padding: 30px 5px;
      border-radius: 8px;
      transform: none;
    }
  }

  .nav {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 80px;
    min-height: auto;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding: 6px 10px;

    &__logo {
      display: none;
    }

    &__menu {
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
      width: 100%;
    }

    &__link {
      flex-direction: column;
      align-items: center;
      justify-content: center;
      gap: 4px;
      padding: 6px 8px;
      width: 75px;
      min-height: 80px;
      margin-left: 0;
      font-size: 1rem;
      border-left: none;
      border-radius: 16px;
      white-space: nowrap;

      img {
        width: 20px;
        height: 20px;
      }

      &:hover {
        background-color: transparent;
      }

      &.active {
        background-color: var(--color-dark-blue) !important;
        color: var(--color-font-bright);
        width: 75px;
      }
    }

    &__footer:not(.nav__footer--guest) {
      display: none !important;
    }
  }
}

@media (max-height: 500px) and (min-width: 769px) {
  .nav {
    padding: 24px 0;

    &__logo {
      margin-bottom: 46px;

      img {
        width: 64px;
      }
    }

    &__footer {
      padding-top: 8px;
    }
  }

  .nav__menu {
    gap: 0;
  }
}


@media (max-width: 375px) {
  .nav {
    padding: 6px 5px;
    &__link {
      width: 25%;
      padding: 6px 2px;
      font-size: 1rem;
      font-weight: 300 !important;

      img {
        width: 18px;
        height: 18px;
      }

      &__menu {
        gap: 0;
      }
    }
  }
}

